# RL

./: .gitignore  Dockerfile  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml
RL-upgraded-v2/RL-upgraded/: README.md  inference.py  openenv.yaml  package-lock.json  pyproject.toml
RL-upgraded-v2/RL-upgraded/backend/: __init__.py  main.py
RL-upgraded-v2/RL-upgraded/backend/routes/: env_routes.py
RL-upgraded-v2/RL-upgraded/baseline/: agent.py  run.py
RL-upgraded-v2/RL-upgraded/env/: email_data.py  environment.py  grader.py  models.py  reward.py  tasks.py
RL-upgraded-v2/RL-upgraded/frontend/: package-lock.json
RL-upgraded-v2/RL-upgraded/frontend/app/: globals.css  page.tsx
RL-upgraded-v2/RL-upgraded/frontend/components/: EmailCard.tsx  LogPanel.tsx  ScoreDisplay.tsx
backend/: main.py
backend/routes/: env_routes.py
baseline/: run.py
env/: __init__.py  grader.py  reward.py  tasks.py
frontend/: package.json
frontend/app/: page.tsx
frontend/components/: EmailCard.tsx
github_push/: README.md  inference.py  requirements.txt
github_push/backend/routes/: email_routes.py
github_push/baseline/: agent.py
github_push/env/: email_data.py  environment.py  grader.py  models.py
github_push/frontend/: next.config.js
github_push/frontend/app/: layout.tsx
github_push/frontend/components/: ActionPanel.tsx
server/: app.py
