[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Email Triage RL Environment for Hackathon"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "openai>=1.50.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]
